--- a/app/views/rocket_job_mission_control/jobs/_exceptions.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_exceptions.html.erb
@@ -19,11 +19,13 @@
         <% end %>
       </th>
 
+      <% if can?(:view_slice, @job) %>
       <th>
         <div>
           <%= link_to 'View Slice', view_slice_job_path(@job, error_type: exception.class_name, record_number: @job.input.failed.first["exception"]["record_number"] ), class: 'btn btn-primary' %>
         </div>
       </th>
+      <% end %>
 
     </tr>
   <% end %>
