Remove bootstrap-sass gem and use vendor library. Fix #62

--- a/app/assets/stylesheets/rocket_job_mission_control/application.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/application.scss
@@ -16,8 +16,7 @@
  *= require_tree .
  */
 
-@import 'bootstrap-sprockets';
-@import 'bootstrap';
+@import 'bootstrap.min';
 @import 'fontawesome-all.min';
 @import 'selectize';
 @import 'selectize.bootstrap3';
