--- a/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
@@ -473,8 +473,7 @@ $hr-border:                                 $gray-lighter;
 
 $component-offset-horizontal: 180px;
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import "bootstrap.min";
 
 .alert {
   margin-bottom: 0px;
