Use events for managing servers

--- a/app/views/rocket_job_mission_control/servers/index.html.erb
+++ b/app/views/rocket_job_mission_control/servers/index.html.erb
@@ -11,7 +11,7 @@
             <div class='server-collection-actions'>
               <ol>
                 <div class='btn-group'>
-                  <% if can?(:create, RocketJob::DirmonEntry) %>
+                  <% if can?(:update_all, RocketJob::Server) %>
                     <% Array(@actions).each do |action| %>
                       <%= link_to(
                               "#{action.to_s.humanize.capitalize}",
