Added the Action column in Enabled Dirmon Entries Page.

--- a/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
@@ -18,6 +18,7 @@
           <th>Name</th>
           <th>Job Class</th>
           <th>Pattern</th>
+          <th>Action<th>
         </tr>
       </thead>
 
