--- a/app/views/rocket_job_mission_control/dirmon_entries/copy.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/copy.html.erb
@@ -1,5 +1,4 @@
 <div class='container-fluid'>
-  <div class='lead'>Update Dirmon Entry</div>
-
-  <%= render partial: 'form', locals: { action: :copy} %>
-</div>
+  <div class='lead'>Copy Dirmon Entry</div>
+  <%= render partial: 'form', locals: { action: :replicate} %>
+  </div>
