Create new Dirmon Entry from an existing instance process (#65)
* my new configuration

* Added the Action column in Enabled Dirmon Entries Page.

* Revert "Added the Action column in Enabled Dirmon Entries Page."

This reverts commit a09dee30898f781ebbeafd01b52178b5de10c6a5.

* Added the Copy button to display in each Dirmon.

* Add the copy page

* Create new Dirmon Entry from an existing instance process

* cleaned my code

* cleaned my comment

--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
@@ -24,8 +24,12 @@
         <%= link_to 'Destroy', dirmon_entry_path(@dirmon_entry), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' } %>
         <% end %>
       </div>
-
-
+      <%# It shows the Copy button in each Dirmon%>
+      <div class='btn-group'>
+        <% if can?(:copy, @dirmon_entry)%>
+        <%= link_to 'Copy', copy_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
+        <% end %>
+      </div>
       <div class='btn-group'>
         <% if can?(:edit, @dirmon_entry)%>
         <%= link_to 'Edit', edit_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
