--- a/app/assets/stylesheets/rocket_job_mission_control/callout.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/callout.scss
@@ -22,9 +22,9 @@
   }
 }
 .callout-scheduled {
-  border-left-color: #92001B;
+  border-left-color: purple;
   a {
-    color: #92001B;
+    color: purple;
   }
 }
 .callout-completed {
