--- a/app/views/rocket_job_mission_control/jobs/_attributes.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_attributes.html.erb
@@ -1,50 +1,85 @@
-<div class='status-message'><label>Attributes:</label></div>
+<div class='lead'>Attributes:</div>
 <div class='row'>
   <div class='col-md-12'>
-    <table style="width:100%">
+    <table>
       <% @attributes.each_pair do |key, value| %>
         <% next if value.is_a?(Array) || value.is_a?(Hash) %>
+        <% key = key.to_s.titleize %>
         <tr>
-          <td><label><%= key.to_s.camelize %>:</label></td>
-          <td><%= value %></td>
+          <td><label><%= key %>:</label></td>
+          <% if value.nil? %>
+            <td><label>nil</label></td>
+          <% else %>
+            <td><%= value %></td>
+          <% end %>
         </tr>
       <% end %>
       <% @attributes.each_pair do |key, value| %>
         <% next unless value.is_a?(Array) %>
-        <% first = true %>
-        <% value.each do |item| %>
-          <% if first %>
-            <tr>
-              <td><label><%= key.to_s.camelize %>:</label></td>
-              <% if item.is_a?(Hash) || item.is_a?(Array) %>
-                <td>
-                  <pre><code><%= pretty_print_array_or_hash(item) %></code></pre>
-                </td>
-              <% else %>
-                <td><%= item %></td>
-              <% end %>
-            </tr>
-            <% first = false %>
-          <% else %>
-            <tr>
-              <td></td>
-              <% if item.is_a?(Hash) || item.is_a?(Array) %>
-                <td>
-                  <pre><code><%= pretty_print_array_or_hash(item) %></code></pre>
-                </td>
-              <% else %>
-                <td><%= item %></td>
-              <% end %>
-            </tr>
+        <% key = key.to_s.titleize %>
+        <% if value.empty? %>
+          <tr>
+            <td><label><%= key %>:</label></td>
+            <td><label>[]</label></td>
+          </tr>
+        <% else %>
+          <% first = true %>
+          <% value.each do |item| %>
+            <% if first %>
+              <tr>
+                <td><label><%= key %>:</label></td>
+                <% if item.is_a?(Hash) || item.is_a?(Array) %>
+                  <td>
+                    <pre><code><%= pretty_print_array_or_hash(item) %></code></pre>
+                  </td>
+                <% else %>
+                  <td><%= item %></td>
+                <% end %>
+              </tr>
+              <% first = false %>
+            <% else %>
+              <tr>
+                <td></td>
+                <% if item.is_a?(Hash) || item.is_a?(Array) %>
+                  <td>
+                    <pre><code><%= pretty_print_array_or_hash(item) %></code></pre>
+                  </td>
+                <% else %>
+                  <td><%= item %></td>
+                <% end %>
+              </tr>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
       <% @attributes.each_pair do |key, value| %>
         <% next unless value.is_a?(Hash) %>
+        <% key = key.to_s.titleize %>
         <tr>
-          <td><label><%= key.to_s.camelize %>:</label></td>
+          <th valign="top"><label><%= key %>:</label></th>
           <td>
-            <pre><code><%= pretty_print_array_or_hash(value) %></code></pre>
+            <% if value.empty? %>
+              <label>{}</label>
+            <% else %>
+              <div class='row'>
+                <div class='col-md-12'>
+                  <table>
+                    <% value.each_pair do |key2, value2| %>
+                      <tr>
+                        <td><label><%= key2.to_s.titleize %>:</label></td>
+                        <% if value2.is_a?(Hash) || value2.is_a?(Array) %>
+                          <td>
+                            <pre><code><%= pretty_print_array_or_hash(value2) %></code></pre>
+                          </td>
+                        <% else %>
+                          <td><%= value2 %></td>
+                        <% end %>
+                      </tr>
+                    <% end %>
+                  </table>
+                </div>
+              </div>
+            <% end %>
           </td>
         </tr>
       <% end %>
