--- a/app/views/rocket_job_mission_control/jobs/_output_categories.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_output_categories.html.erb
@@ -1,16 +1,18 @@
-<div class='status-message'><label>Output Categories:</label></div>
+<div class='lead'>Output Categories:</div>
 <% @job.output_categories.each do |category| %>
   <div class='row'>
     <div class='col-md-12'>
       <div class='status-message'><label><%= category.name.to_s.camelcase %>:</label></div>
       <div class='row'>
         <div class='col-md-12'>
-          <table style="width:100%">
-            <tr>
-              <% if category.serializer %>
+          <table>
+            <% if category.serializer %>
+              <tr>
                 <td><label>Serializer:</label></td>
                 <td><%= category.serializer %></td>
-              <% end %>
+              </tr>
+            <% end %>
+            <tr>
               <td><label>Collect nil output:</label></td>
               <td><%= category.nils %></td>
             </tr>
@@ -25,18 +27,29 @@
                 <td><label>Format:</label></td>
                 <td><%= category.format %></td>
               </tr>
-              <tr>
-                <% if category.format_options %>
+              <% if category.format_options %>
+                <tr>
                   <td><label>Format Options:</label></td>
-                  <pre><code><%= category.format_options.ai(plain: true, ruby19_syntax: true, sort_keys: true) %></code></pre>
-                <% end %>
-              </tr>
+                  <td><pre><code><%= category.format_options.ai(plain: true, ruby19_syntax: true, sort_keys: true) %></code></pre></td>
+                </tr>
+              <% end %>
             <% end %>
             <% if category.columns %>
-              <tr>
-                <td><label>Columns:</label></td>
-                <td><%= category.columns&.join(",") %></td>
-              </tr>
+              <% first = true %>
+              <% category.columns.each do |item| %>
+                <% if first %>
+                  <tr>
+                    <td><label>Columns:</label></td>
+                    <td><%= item %></td>
+                  </tr>
+                  <% first = false %>
+                <% else %>
+                  <tr>
+                    <td></td>
+                    <td><%= item %></td>
+                  </tr>
+                <% end %>
+              <% end %>
             <% end %>
           </table>
         </div>
