--- a/app/views/rocket_job_mission_control/jobs/_details.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_details.html.erb
@@ -77,10 +77,10 @@
         </tr>
       <% end %>
       <tr>
-        <td><label>ID:</label</td>
+        <td><label>ID:</label></td>
         <td><%= @job.id %></td>
       </tr>
     </table>
   </div>
 </div>
-</br>
+<br/>
