--- a/app/views/rocket_job_mission_control/dirmon_entries/_form.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_form.html.erb
@@ -49,6 +49,33 @@
                 <%= editable_field_html(@dirmon_entry.job_class, property_name, @dirmon_entry.properties[property_name], properties, true) %>
               </div>
             <% end %>
+            <% if @dirmon_entry.job_class.respond_to?(:defined_input_categories) && @dirmon_entry.job_class.respond_to?(:defined_output_categories) %>
+              <div class='lead'>Input Categories</div>
+              <% @job = @dirmon_entry.job_class.from_properties(@dirmon_entry.properties) %>
+              <% @job.input_categories.each do |category| %>
+                <div class='lead'><%= category.name.to_s.titleize %></div>
+                <div class='form-group'>
+                  <%= properties.label "Format" %>
+                  <% options = extract_inclusion_values(RocketJob::Category::Input, :format) %>
+                  <%= properties.select(:format, options, {include_blank: true, selected: category.format}, {class: "selectize form-control"}) %>
+                  <%= properties.label "Columns" %>
+                  <% options = Array(category.columns) %>
+                  <%= properties.select(:columns, options_for_select(options, options), {include_hidden: false}, {class: "selectize form-control", multiple: true}) %>
+                </div>
+              <% end %>
+              <div class='lead'>Output Categories</div>
+              <% @job.output_categories.each do |category| %>
+                <div class='lead'><%= category.name.to_s.titleize %></div>
+                <div class='form-group'>
+                  <%= properties.label "Format" %>
+                  <% options = extract_inclusion_values(RocketJob::Category::Output, :format) %>
+                  <%= properties.select(:format, options, {include_blank: true, selected: category.format}, {class: "selectize form-control"}) %>
+                  <%= properties.label "Columns" %>
+                  <% options = Array(category.columns) %>
+                  <%= properties.select(:columns, options_for_select(options, options), {include_hidden: false}, {class: "selectize form-control", multiple: true}) %>
+                </div>
+              <% end %>
+            <% end %>
           <% end %>
         </div>
       <% end %>
@@ -60,10 +87,10 @@
 
       <% if action == :create %>
         <%= button_tag 'properties',
-            type:  'button',
-            class: 'btn btn-default',
-            id:    'properties',
-            data:  { url: rocket_job_mission_control.new_dirmon_entry_path } %>
+                       type:  'button',
+                       class: 'btn btn-default',
+                       id:    'properties',
+                       data:  {url: rocket_job_mission_control.new_dirmon_entry_path} %>
       <% end %>
     </div>
   </div>
