--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
@@ -1,13 +1,13 @@
 <div class='col-md-12 job-status'>
   <div id='job'>
-    <div class='lead'><%= @dirmon_entry.job_class_name %></div>
+    <div class='lead'><%= @dirmon_entry.name %></div>
 
     <div class='job-state inline-block'>
       <div class='left'>status</div>
       <div class="<%= @dirmon_entry.state %> right"><%= @dirmon_entry.state %></div>
     </div>
 
-    <div class='btn-toolbar job-actions pull-right'>
+    <div class='btn-toolbar job-actions'>
       <div class='btn-group'>
         <% if (@dirmon_entry.disabled? || @dirmon_entry.pending?) && can?(:enable, @dirmon_entry) %>
           <%= link_to 'Enable', enable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default' %>
